--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Lemon Mediation — Resolving Disputes Across California</title>
 <link rel="stylesheet" href="assets/styles.css"><script defer src="assets/main.js"></script></head>
+<body>
 
-<body class="home">
-<header class="site-header transparent">
+<header class="site-header">
   <div class="container nav-container">
     <a class="logo" href="index.html"><img src="assets/logo.png" alt="Lemon Mediation"></a>
     <nav class="main-nav">
@@ -45,7 +45,6 @@
   </div>
 </header>
 
-<section class="hero"><div class="hero-content"><h1>Resolving Disputes Across California</h1><p>Neutral. Practical. People‑first mediation for real results.</p><a href="#info" class="cta">Schedule a Mediation</a></div></section>
 <main id="info" class="info-section"><div class="container"><h2>Why Choose Lemon Mediation?</h2>
 <div class="grid"><div class="card"><h3>Efficient Resolution</h3><p>Most disputes can be resolved in one session—saving you time, cost, and stress.</p></div>
 <div class="card"><h3>Neutral Guidance</h3><p>We focus on clarity, communication, and durable agreements that actually work.</p></div>
