--- a/about.html
+++ b/about.html
@@ -1,94 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About — Lemon Mediation</title>
 <link rel="stylesheet" href="assets/styles.css">
 <script defer src="assets/main.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 </head>
-<body>
-<header class="site-header">
-  <div class="top-bar">
-    <div class="container">
-      <span class="contact-phone">(555) 123-4567</span>
-      <span class="contact-sep">|</span>
-      <a class="contact-email" href="mailto:info@lemonmediation.example">info@lemonmediation.example</a>
+
+<body class="about">
+
+  <!-- Header -->
+  <header class="site-header">
+    <div class="top-bar">
+      <div class="container">
+        <span class="contact-phone">(555) 123-4567</span>
+        <span class="contact-sep">|</span>
+        <a class="contact-email" href="mailto:info@lemonmediation.example">info@lemonmediation.example</a>
+      </div>
     </div>
-  </div>
-  <div class="nav-bar">
-    <div class="container nav-container">
-      <a class="logo" href="index.html"><img src="assets/logo.png" alt="Lemon Mediation" /></a>
-      <nav class="main-nav" aria-label="Main menu">
+    <div class="nav-bar">
+      <div class="container nav-container">
+        <a class="logo" href="index.html"><img src="assets/logo.png" alt="Lemon Mediation" /></a>
+        <nav class="main-nav" aria-label="Main menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li class="has-dropdown">
+              <a href="services/index.html">Services</a>
+              <ul class="dropdown">
+                <li><a href="services/lemon-law.html">Lemon Law Mediation</a></li>
+                <li><a href="services/business-commercial.html">Business & Commercial</a></li>
+                <li><a href="services/employment.html">Employment</a></li>
+                <li><a href="services/personal-injury.html">Personal Injury</a></li>
+                <li><a href="services/debt-collection.html">Debt Collection</a></li>
+                <li><a href="services/real-estate.html">Real Estate</a></li>
+                <li><a href="services/ip.html">Trademark & Copyright</a></li>
+                <li><a href="services/wage-hour.html">Wage & Hour</a></li>
+              </ul>
+            </li>
+            <li class="has-dropdown">
+              <a href="faqs/index.html">FAQs</a>
+              <ul class="dropdown">
+                <li><a href="faqs/misconceptions.html">Common Misconceptions</a></li>
+                <li><a href="faqs/tips-for-attorneys.html">Tips for Attorneys</a></li>
+              </ul>
+            </li>
+            <li><a href="blog/index.html">Blog</a></li>
+            <li class="has-dropdown">
+              <a href="articles/index.html">Articles</a>
+              <ul class="dropdown"><li><a href="articles/webinars.html">Webinars</a></li></ul>
+            </li>
+            <li><a href="about.html" class="active">About</a></li>
+            <li><a href="bio.html">Bio</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <button class="nav-toggle" aria-label="Toggle menu">☰</button>
+      </div>
+    </div>
+  </header>
+
+  <!-- Navy Banner -->
+  <section class="page-banner">
+    <div class="container">
+      <h1>About Us</h1>
+      <p class="subtitle">Neutral. Practical. Resolution-focused.</p>
+    </div>
+  </section>
+
+  <!-- Combined Story + Profile Section -->
+  <section class="about-image-block">
+    <div class="text-column">
+      <h2>Our Story</h2>
+      <p>Lemon Mediation is guided by balance, fairness, and clarity. Our mission is to help parties resolve disputes with integrity, neutrality, and respect.</p>
+      <p>Just as art captures harmony between light and shadow, mediation brings balance between differing perspectives.</p>
+
+      <div class="mediator-profile-inline">
+        <div class="profile-photo"></div>
+        <div class="profile-text">
+          <h3>Meet Nina</h3>
+          <p><strong>Nina</strong> is a dedicated and empathetic mediator specializing in Lemon Law cases, guiding clients through complex disputes with clarity and compassion.</p>
+          <p>With a foundation built through formal mediation training, mentorship under experienced professionals, and specialized webinars, Nina blends education with real-world insight to bring a thoughtful, balanced perspective to every session.</p>
+          <p>Adaptable, curious, and genuinely invested in helping others, Nina approaches each case with patience and an open mind. She believes that effective mediation isn’t just about resolving disagreements—it’s about understanding the people behind them. By listening deeply and asking the right questions, she creates a space where all voices are heard and respected, fostering meaningful dialogue that leads to practical, lasting resolutions.</p>
+          <p>Drawing on both study and hands-on experience, Nina mediates with a balance of empathy and objectivity, helping clients reach fair, efficient outcomes. Her approach emphasizes collaboration over confrontation, encouraging parties to find common goals and work together toward resolution.</p>
+          <p>At the heart of Nina’s work is a genuine passion for bringing people together. Whether navigating complex legal issues or simply helping clients feel understood and empowered, she finds purpose in helping others move forward with confidence, respect, and peace of mind.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="image-column">
+      <img src="assets/angel-statue.png" alt="Angel statue" class="angel-image">
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <h3>Contact</h3>
+        <p>445 S. Figueroa Street<br>Suite 2388<br>Los Angeles, CA 90071</p>
+        <p><strong>Phone:</strong> (555) 123-4567<br>
+        <strong>Email:</strong> <a href="mailto:info@lemonmediation.example">info@lemonmediation.example</a></p>
+      </div>
+      <div>
+        <h3>Quick Links</h3>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="has-dropdown">
-            <a href="services/index.html">Services</a>
-            <ul class="dropdown">
-              <li><a href="services/lemon-law.html">Lemon Law Mediation</a></li>
-              <li><a href="services/business-commercial.html">Business &amp; Commercial Mediation</a></li>
-              <li><a href="services/employment.html">Employment Mediation</a></li>
-              <li><a href="services/personal-injury.html">Personal Injury Mediation</a></li>
-              <li><a href="services/debt-collection.html">Debt Collection Mediation</a></li>
-              <li><a href="services/real-estate.html">Real Estate Mediation</a></li>
-              <li><a href="services/ip.html">Trademark &amp; Copyright Mediation</a></li>
-              <li><a href="services/wage-hour.html">Wage &amp; Hour Mediation</a></li>
-            </ul>
-          </li>
-          <li class="has-dropdown">
-            <a href="faqs/index.html">FAQs</a>
-            <ul class="dropdown">
-              <li><a href="faqs/misconceptions.html">Common Misconceptions</a></li>
-              <li><a href="faqs/tips-for-attorneys.html">Tips for Attorneys</a></li>
-            </ul>
-          </li>
-          <li><a href="blog/index.html">Blog</a></li>
-          <li class="has-dropdown">
-            <a href="articles/index.html">Articles</a>
-            <ul class="dropdown">
-              <li><a href="articles/webinars.html">Webinars</a></li>
-            </ul>
-          </li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="bio.html">Bio</a></li>
-          <li><a href="calendar.html">Calendar</a></li>
+          <li><a href="services/index.html">Services</a></li>
+          <li><a href="faqs/index.html">FAQs</a></li>
+          <li><a href="articles/index.html">Articles</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
-      </nav>
-      <button class="nav-toggle" aria-label="Toggle menu">☰</button>
+      </div>
+      <div>
+        <h3>Resources</h3>
+        <ul>
+          <li><a href="terms.html">Terms</a></li>
+          <li><a href="privacy.html">Privacy</a></li>
+          <li><a href="disclaimer.html">Disclaimer</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</header>
-<main class="container">
-<h2>About Lemon Mediation</h2><p>We’re a neutral mediation practice focused on helping parties find workable agreements. Our approach is grounded, respectful, and pragmatic.</p>
-</main>
-<footer class="site-footer">
-  <div class="container footer-grid">
-    <div>
-      <h3>Contact</h3>
-      <p>445 S. Figueroa Street<br>Suite 2388<br>Los Angeles, CA 90071</p>
-      <p><strong>Phone:</strong> (555) 123-4567<br><strong>Email:</strong> <a href="mailto:info@lemonmediation.example">info@lemonmediation.example</a></p>
+    <div class="container copyright">
+      © <span data-year></span> Lemon Mediation. All rights reserved.
     </div>
-    <div>
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="services/index.html">Services</a></li>
-        <li><a href="faqs/index.html">FAQs</a></li>
-        <li><a href="articles/index.html">Articles</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-    <div>
-      <h3>Resources</h3>
-      <ul>
-        <li><a href="terms.html">Terms</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
-        <li><a href="disclaimer.html">Disclaimer</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="container copyright">
-    © <span data-year></span> Lemon Mediation. All rights reserved.
-  </div>
-</footer>
-</body></html>
+  </footer>
+
+</body>
+</html>
