--- a/contact.html
+++ b/contact.html
@@ -1,94 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact — Lemon Mediation</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Contact — Cal Mediation Group</title>
 <link rel="stylesheet" href="assets/styles.css">
 <script defer src="assets/main.js"></script>
 </head>
-<body>
+<body class="contact">
+
 <header class="site-header">
-  <div class="top-bar">
-    <div class="container">
-      <span class="contact-phone">(555) 123-4567</span>
-      <span class="contact-sep">|</span>
-      <a class="contact-email" href="mailto:info@lemonmediation.example">info@lemonmediation.example</a>
-    </div>
-  </div>
   <div class="nav-bar">
     <div class="container nav-container">
-      <a class="logo" href="index.html"><img src="assets/logo.png" alt="Lemon Mediation" /></a>
+      <a class="logo" href="index.html">
+        <img src="assets/logo.png" alt="Cal Mediation Group" />
+      </a>
       <nav class="main-nav" aria-label="Main menu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li class="has-dropdown">
-            <a href="services/index.html">Services</a>
-            <ul class="dropdown">
-              <li><a href="services/lemon-law.html">Lemon Law Mediation</a></li>
-              <li><a href="services/business-commercial.html">Business &amp; Commercial Mediation</a></li>
-              <li><a href="services/employment.html">Employment Mediation</a></li>
-              <li><a href="services/personal-injury.html">Personal Injury Mediation</a></li>
-              <li><a href="services/debt-collection.html">Debt Collection Mediation</a></li>
-              <li><a href="services/real-estate.html">Real Estate Mediation</a></li>
-              <li><a href="services/ip.html">Trademark &amp; Copyright Mediation</a></li>
-              <li><a href="services/wage-hour.html">Wage &amp; Hour Mediation</a></li>
-            </ul>
-          </li>
-          <li class="has-dropdown">
-            <a href="faqs/index.html">FAQs</a>
-            <ul class="dropdown">
-              <li><a href="faqs/misconceptions.html">Common Misconceptions</a></li>
-              <li><a href="faqs/tips-for-attorneys.html">Tips for Attorneys</a></li>
-            </ul>
-          </li>
-          <li><a href="blog/index.html">Blog</a></li>
-          <li class="has-dropdown">
-            <a href="articles/index.html">Articles</a>
-            <ul class="dropdown">
-              <li><a href="articles/webinars.html">Webinars</a></li>
-            </ul>
-          </li>
           <li><a href="about.html">About</a></li>
-          <li><a href="bio.html">Bio</a></li>
           <li><a href="calendar.html">Calendar</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
       </nav>
       <button class="nav-toggle" aria-label="Toggle menu">☰</button>
     </div>
   </div>
 </header>
-<main class="container">
-<h2>Contact</h2><p><strong>Phone:</strong> (555) 123-4567<br><strong>Email:</strong> info@lemonmediation.example<br><strong>Address:</strong> 445 S. Figueroa Street, Suite 2388, Los Angeles, CA 90071</p><form class='card' onsubmit="event.preventDefault(); alert('Thanks — we\'ll be in touch!')"><label>Name<br><input type='text' required style='width:100%; padding:.6rem; border:1px solid #e2e8f0; border-radius:.5rem;'></label><br><br><label>Email<br><input type='email' required style='width:100%; padding:.6rem; border:1px solid #e2e8f0; border-radius:.5rem;'></label><br><br><label>Message<br><textarea required rows='5' style='width:100%; padding:.6rem; border:1px solid #e2e8f0; border-radius:.5rem;'></textarea></label><br><br><button class='cta' type='submit'>Send</button></form>
+
+<section class="page-banner">
+  <div class="banner-inner">
+    <h1>Contact Us</h1>
+    <p class="subtitle">We’re here to help, reach out anytime.</p>
+  </div>
+</section>
+
+<main class="contact-centered">
+
+  <div id="success-message" class="success-message" style="display:none;">
+    ✓ Thank you — we’ll be in touch shortly.
+  </div>
+
+  <p class="direct-email">
+    <a href="mailto:info@calmediationgroup.com">info@calmediationgroup.com</a>
+  </p>
+
+  <form class="contact-form"
+        onsubmit="event.preventDefault(); document.getElementById('success-message').style.display='block';">
+
+    <label>
+      Name
+      <input type="text" required>
+    </label>
+
+    <label>
+      Email
+      <input type="email" required>
+    </label>
+
+    <label>
+      Message
+      <textarea rows="5" required></textarea>
+    </label>
+
+    <button class="cta" type="submit">Send Message</button>
+  </form>
+
 </main>
+
 <footer class="site-footer">
   <div class="container footer-grid">
     <div>
       <h3>Contact</h3>
-      <p>445 S. Figueroa Street<br>Suite 2388<br>Los Angeles, CA 90071</p>
-      <p><strong>Phone:</strong> (555) 123-4567<br><strong>Email:</strong> <a href="mailto:info@lemonmediation.example">info@lemonmediation.example</a></p>
+      <p><strong>Email:</strong>
+        <a href="mailto:info@calmediationgroup.com">info@calmediationgroup.com</a>
+      </p>
     </div>
     <div>
       <h3>Quick Links</h3>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="services/index.html">Services</a></li>
-        <li><a href="faqs/index.html">FAQs</a></li>
-        <li><a href="articles/index.html">Articles</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="calendar.html">Calendar</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
-    <div>
-      <h3>Resources</h3>
-      <ul>
-        <li><a href="terms.html">Terms</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
-        <li><a href="disclaimer.html">Disclaimer</a></li>
-      </ul>
-    </div>
   </div>
+
   <div class="container copyright">
-    © <span data-year></span> Lemon Mediation. All rights reserved.
+    © <span data-year></span> Cal Mediation Group. All rights reserved.
   </div>
 </footer>
-</body></html>
+
+</body>
+</html>
