--- a/index.html
+++ b/index.html
@@ -1,61 +1,85 @@
-<!DOCTYPE html><html lang="en"><head>
-<meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lemon Mediation — Resolving Disputes Across California</title>
-<link rel="stylesheet" href="assets/styles.css"><script defer src="assets/main.js"></script></head>
-<body>
-
-<header class="site-header">
-  <div class="container nav-container">
-    <a class="logo" href="index.html"><img src="assets/logo.png" alt="Lemon Mediation"></a>
-    <nav class="main-nav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li class="has-dropdown">
-          <a href="services/index.html">Services</a>
-          <ul class="dropdown">
-            <li><a href="services/lemon-law.html">Lemon Law Mediation</a></li>
-            <li><a href="services/business-commercial.html">Business & Commercial</a></li>
-            <li><a href="services/employment.html">Employment</a></li>
-            <li><a href="services/personal-injury.html">Personal Injury</a></li>
-            <li><a href="services/debt-collection.html">Debt Collection</a></li>
-            <li><a href="services/real-estate.html">Real Estate</a></li>
-            <li><a href="services/ip.html">Trademark & Copyright</a></li>
-            <li><a href="services/wage-hour.html">Wage & Hour</a></li>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lemon Mediation — Resolving Disputes Across California</title>
+  <link rel="stylesheet" href="assets/styles.css">
+  <script defer src="assets/main.js"></script>
+</head>
+<body class="home">
+  <header class="site-header transparent">
+    <div class="nav-bar">
+      <div class="container nav-container">
+        <a class="logo" href="index.html">
+          <img src="assets/logo.png" alt="Lemon Mediation">
+        </a>
+        <nav class="main-nav" aria-label="Main menu">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
-        </li>
-        <li class="has-dropdown">
-          <a href="faqs/index.html">FAQs</a>
-          <ul class="dropdown">
-            <li><a href="faqs/misconceptions.html">Common Misconceptions</a></li>
-            <li><a href="faqs/tips-for-attorneys.html">Tips for Attorneys</a></li>
-          </ul>
-        </li>
-        <li><a href="blog/index.html">Blog</a></li>
-        <li class="has-dropdown">
-          <a href="articles/index.html">Articles</a>
-          <ul class="dropdown"><li><a href="articles/webinars.html">Webinars</a></li></ul>
-        </li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="bio.html">Bio</a></li>
-        <li><a href="calendar.html">Calendar</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <button class="nav-toggle">☰</button>
-  </div>
-</header>
+        </nav>
+        <button class="nav-toggle" aria-label="Toggle menu">☰</button>
+      </div>
+    </div>
+  </header>
 
-<main id="info" class="info-section"><div class="container"><h2>Why Choose Lemon Mediation?</h2>
-<div class="grid"><div class="card"><h3>Efficient Resolution</h3><p>Most disputes can be resolved in one session—saving you time, cost, and stress.</p></div>
-<div class="card"><h3>Neutral Guidance</h3><p>We focus on clarity, communication, and durable agreements that actually work.</p></div>
-<div class="card"><h3>Client-Focused</h3><p>Your goals and constraints shape the process—every session is tailored to your needs.</p></div></div></div></main>
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Mediation that moves you forward</h1>
+      <p>Turn your conflict into resolution</p>
+      <a href="#info" class="cta">Schedule a Mediation</a>
+    </div>
+  </section>
 
-<footer class="site-footer">
-  <div class="container footer-grid">
-    <div><h3>Contact</h3><p>445 S. Figueroa Street<br>Suite 2388<br>Los Angeles, CA 90071</p><p><strong>Phone:</strong> (555) 123‑4567<br><strong>Email:</strong> info@lemonmediation.example</p></div>
-    <div><h3>Quick Links</h3><ul><li><a href="services/index.html">Services</a></li><li><a href="faqs/index.html">FAQs</a></li><li><a href="articles/index.html">Articles</a></li><li><a href="contact.html">Contact</a></li></ul></div>
-  </div>
-  <div class="container copyright">© <span data-year></span> Lemon Mediation. All rights reserved.</div>
-</footer>
+  <main id="info" class="info-section">
+    <div class="container">
+      <h2>Why Choose Lemon Mediation?</h2>
+      <div class="grid">
+        <div class="card">
+          <img src="assets/icon-client-focused.png" alt="Client-Focused icon" style="width:48px;height:48px;margin-bottom:10px;">
+          <h3>Client-Focused</h3>
+          <p>No two conflicts are the same. We pride ourselves in tailored solutions for every need.</p>
+        </div>
+        <div class="card">
+          <img src="assets/icon-rooted-in-understanding.png" alt="Rooted In Understanding icon" style="width:48px;height:48px;margin-bottom:10px;">
+          <h3>Rooted In Understanding</h3>
+          <p>We listen first to create space for every voice to be heard and each concern to be acknowledged.</p>
+        </div>
+        <div class="card">
+          <img src="assets/icon-fair-and-lasting-agreements.png" alt="Fair and Lasting Agreements icon" style="width:48px;height:48px;margin-bottom:10px;">
+          <h3>Fair and Lasting Agreements</h3>
+          <p>Our focus is not on quick mediations but developing fair and sustainable outcomes that honor each person's needs.</p>
+        </div>
+      </div>
+    </div>
+  </main>
 
-</body></html>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        </p>
+          <h3>Contact Us</h3>
+            <strong>Email:</strong>
+            <a href="mailto:info@calmediationgroup.com">info@calmediationgroup.com</a>
+        </p>
+      </div>
+      <div>
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="calendar.html">Calendar</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="container copyright">
+      © <span data-year></span> Lemon Mediation. All rights reserved.
+    </div>
+  </footer>
+</body>
+</html>
