logo and minor changes

--- a/about.html
+++ b/about.html
@@ -245,7 +245,8 @@
             <!-- Right column: "Meet Nina" -->
             <div class="profile-text">
               <h3>Meet Nina</h3>
-              <p>Nina is a dedicated and empathetic mediator specializing in Lemon Law cases, helping clients navigate complex disputes with clarity and compassion. Through formal mediation training, shadowing experienced professionals, and attending specialized webinars, she blends education and real-world observation to bring a balanced, thoughtful approach to every session. Adaptable, curious, and deeply invested in helping others, Nina listens attentively, asks insightful questions, and creates a space where all voices are heard and respected. Drawing on her studies and hands-on experience, she mediates with empathy and objectivity, emphasizing collaboration to guide clients toward fair and lasting resolutions while empowering them to move forward with confidence, respect, and peace of mind.</p>
+              <p>Nina is a dedicated and empathetic mediator specializing in Lemon Law cases, helping clients navigate complex disputes with clarity and compassion. Through formal mediation training, shadowing experienced professionals, and attending specialized webinars, she blends education and real-world observation to bring a balanced, thoughtful approach to every session.</p>
+              <p>Adaptable, curious, and deeply invested in helping others, Nina listens attentively, asks insightful questions, and creates a space where all voices are heard and respected. Drawing on her studies and hands-on experience, she mediates with empathy and objectivity, emphasizing collaboration to guide clients toward fair and lasting resolutions while empowering them to move forward with confidence, respect, and peace of mind.</p>
             </div>          
           </div>
         </div>
