--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1>Mediation that moves you forward</h1>
+      <h1 class="hero-title">MEDIATION THAT MOVES YOU FORWARD</h1>
       <p>Turn your conflict into resolution</p>
-      <a href="#info" class="cta">Schedule a Mediation</a>
+      <a href="contact.html" class="cta">Schedule a Mediation</a>
     </div>
   </section>
 
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="container copyright">
-      © <span data-year></span> Lemon Mediation. All rights reserved.
+      © <span data-year></span> Cal Mediation. All rights reserved.
     </div>
   </footer>
 </body>
