--- a/index.html
+++ b/index.html
@@ -6,6 +6,70 @@
   <title>Lemon Mediation — Resolving Disputes Across California</title>
   <link rel="stylesheet" href="assets/styles.css">
   <script defer src="assets/main.js"></script>
+  <style>
+    /* Mobile hero refinements */
+    @media (max-width: 768px) {
+      .hero {
+        padding: 6rem 1rem 3rem;
+        background-position: center;
+      }
+
+      .hero-content {
+        padding-top: 2rem;
+      }
+
+      .hero-title {
+        font-size: 1.9rem !important;
+        line-height: 1.25;
+        margin-bottom: 0.75rem;
+      }
+
+      .hero p {
+        font-size: 1.05rem;
+        margin-bottom: 1.25rem;
+      }
+
+      .hero .cta {
+        padding: 0.85rem 1.4rem;
+        font-size: 1rem;
+        border-radius: 10px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .hero {
+        padding: 5rem 0.75rem 2.5rem;
+      }
+
+      .hero-title {
+        font-size: 1.6rem !important;
+      }
+
+      .hero .cta {
+        width: 100%;
+        max-width: 260px;
+        text-align: center;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .site-footer {
+        padding-top: 1rem;
+      }
+
+      .footer-grid div {
+        margin-bottom: 1rem;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .nav-toggle {
+        position: absolute;
+        right: 1rem;
+        top: 1.2rem;
+      }
+    }
+  </style>
 </head>
 <body class="home">
   <header class="site-header transparent">
@@ -27,7 +91,7 @@
     </div>
   </header>
 
-  <section class="hero">
+  <section class="hero" style="display:flex;align-items:center;justify-content:center;text-align:center;">
     <div class="hero-content">
       <h1 class="hero-title">MEDIATION THAT MOVES YOU FORWARD</h1>
       <p>Turn your conflict into resolution</p>
@@ -61,10 +125,10 @@
   <footer class="site-footer">
     <div class="container footer-grid">
       <div>
-        </p>
-          <h3>Contact Us</h3>
-            <strong>Email:</strong>
-            <a href="mailto:info@calmediationgroup.com">info@calmediationgroup.com</a>
+        <h3>Contact Us</h3>
+        <p>
+          <strong>Email:</strong>
+          <a href="mailto:info@calmediationgroup.com">info@calmediationgroup.com</a>
         </p>
       </div>
       <div>
