--- a/about.html
+++ b/about.html
@@ -184,15 +184,86 @@
     margin-right: -10rem;  /* push the paragraph a bit into the right float area */
   }
 
-  /* "Our Story" heading
-     - Matches serif style; adjust size/weight to change prominence. */
-  .about .text-column h2 {
-    font-family: "Georgia", "Times New Roman", serif;
-    font-size: 2.8rem;
-    font-weight: 600;
-    margin-bottom: 1rem;
-    
+</style>
+  /* ===============================
+     MOBILE RESPONSIVE OPTIMIZATION
+     =============================== */
+
+  @media (max-width: 900px) {
+
+    /* Remove 1-inch left margin for mobile */
+    .about .content-wrapper,
+    .about .page-banner .container {
+      padding-left: 1.2rem !important;
+      padding-right: 1.2rem !important;
+    }
+
+    /* Stack Nina + Kayla sections */
+    .about .mediator-profile-inline {
+      grid-template-columns: 1fr !important;
+      margin-right: 0;
+    }
+
+    .mediator-profile-inline .profile-text p {
+      margin-right: 0 !important;
+      position: relative;
+      z-index: 3;
+    }
+
+    .photo-wrapper::before {
+      top: 20px;
+      left: 0;
+      width: 100%;
+      height: 90%;
+    }
+
+    /* Portrait image size */
+    .about .mediator-profile-inline .profile-photo {
+      width: 100%;
+      max-width: 420px;
+      margin: 0 auto;
+    }
+
+    /* Headings scale */
+    .about .text-column h2 {
+      font-size: 2rem;
+    }
+
+    .mediator-profile-inline h3 {
+      font-size: 1.8rem;
+    }
+
+    .about .statue-image {
+      display: none; /* hide statue on mobile for readability */
+    }
   }
+
+  @media (max-width: 600px) {
+    .about .text-column h2 {
+      font-size: 1.7rem;
+    }
+
+    .mediator-profile-inline h3 {
+      font-size: 1.6rem;
+    }
+
+    .page-banner h1 {
+      font-size: 1.8rem !important;
+    }
+
+    .page-banner .subtitle {
+      font-size: 1rem !important;
+    }
+  }
+
+  @media (max-width: 768px) {
+    .nav-toggle {
+      position: absolute;
+      right: 1rem;
+      top: 1.2rem;
+    }
+  }
+</style>
 </style>
 </head>
 
@@ -255,7 +326,7 @@
         <div class="mediator-profile-inline">
           <!-- Left column: portrait container (gray background uses ::before) -->
           <div class="photo-wrapper">
-            <img src="assets/kayla-profile.png" alt="Photo of mediator Kayla" class="profile-photo" style="margin-left:-45px; margin-top:-24px; width:105%; max-width:none;">
+            <img src="assets/kayla-profile.png" alt="Photo of mediator Kayla" class="profile-photo" style="width:100%; max-width:420px;">
           </div>
 
           <!-- Right column: "Meet Kayla" -->
@@ -292,6 +363,7 @@
     <div class="container footer-grid">
       <div>
         <h3>Contact Us</h3>
+        <p>
           <strong>Email:</strong>
           <a href="mailto:info@calmediationgroup.com">info@calmediationgroup.com</a>
         </p>
