--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,77 @@
 <title>Contact — Cal Mediation Group</title>
 <link rel="stylesheet" href="assets/styles.css">
 <script defer src="assets/main.js"></script>
+<style>
+  /* ===============================
+     CONTACT PAGE — MOBILE OPTIMIZATION
+     =============================== */
+
+  @media (max-width: 768px) {
+
+    /* Adjust nav toggle (hamburger) */
+    .nav-toggle {
+      position: absolute;
+      right: 1rem;
+      top: 1.2rem;
+    }
+
+    /* Banner text scaling */
+    .page-banner h1 {
+      font-size: 1.8rem !important;
+    }
+
+    .page-banner .subtitle {
+      font-size: 1rem !important;
+    }
+
+    /* Direct email spacing */
+    .direct-email {
+      margin-top: 0.5rem;
+      margin-bottom: 1.5rem;
+      font-size: 1.1rem;
+    }
+
+    /* Contact form adjustments */
+    .contact-form {
+      padding: 1.5rem 1rem;
+      margin-bottom: 3rem;
+    }
+
+    .contact-form label {
+      font-size: 0.95rem;
+    }
+
+    .contact-form input,
+    .contact-form textarea {
+      font-size: 1rem;
+    }
+
+    .contact-form .cta {
+      width: 100%;
+      max-width: 260px;
+      text-align: center;
+      font-size: 1rem;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .page-banner h1 {
+      font-size: 1.6rem !important;
+    }
+
+    .page-banner .subtitle {
+      font-size: 0.95rem !important;
+    }
+
+    .contact-centered {
+      padding: 0 1rem;
+    }
+
+    .contact-form {
+      padding: 1.2rem 0.8rem;
+    }
+  }
+</style>
 </head>
 <body class="contact">
 
