--- a/calendar.html
+++ b/calendar.html
@@ -124,6 +124,16 @@
     </div>
   </header>
 
+  <div class="mobile-menu-overlay">
+    <button class="mobile-menu-close" aria-label="Close menu">×</button>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="calendar.html">Calendar</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+
   <section class="page-banner">
     <div class="banner-inner">
       <h1>Scheduling</h1>
