--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
       </div>
     </div>
   </header>
+  <div class="mobile-menu-overlay">
+    <button class="mobile-menu-close" aria-label="Close menu">×</button>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="calendar.html">Calendar</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
 
   <section class="hero" style="display:flex;align-items:center;justify-content:center;text-align:center;">
     <div class="hero-content">
