--- a/about.html
+++ b/about.html
@@ -227,13 +227,16 @@
     }
   }
 
-  @media (max-width: 768px) {
-    .nav-toggle {
-      position: absolute;
-      right: 1rem;
-      top: 1.2rem;
+</style>
+  @media (max-width: 600px) {
+    .logo img {
+      height: 28px !important;
+    }
+    .nav-container {
+      padding: 0.4rem 0 !important;
     }
   }
+</style>
 </style>
 </head>
 
@@ -258,6 +261,15 @@
       </div>
     </div>
   </header>
+  <div class="mobile-menu-overlay">
+    <button class="mobile-menu-close" aria-label="Close menu">×</button>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="calendar.html">Calendar</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
 
   <!-- Navy Banner -->
   <section class="page-banner">
