--- a/about.html
+++ b/about.html
@@ -97,6 +97,10 @@
     object-fit: cover;
   }
 
+  .about .mediator-profile-inline .photo-wrapper {
+    margin-top: -30px;
+  }
+
   /* Photo wrapper (non-floating)
      - Holds the gray background "card" via ::before; keeps layout stable (no text wrapping around the silhouette). */
   .photo-wrapper {
@@ -112,7 +116,7 @@
   .photo-wrapper::before {
     content: "";
     position: absolute;
-    top: 50px;
+    top: 10px;
     left: -20px;
     width: 300px;
     height: 314px;
