--- a/about.html
+++ b/about.html
@@ -97,9 +97,9 @@
     object-fit: cover;
   }
 
-.about .mediator-profile-inline .photo-wrapper {
-    margin-top: -200px !important;
-}
+  .about .mediator-profile-inline .photo-wrapper {
+    margin-top: -60px;
+  }
 
   /* Photo wrapper (non-floating)
      - Holds the gray background "card" via ::before; keeps layout stable (no text wrapping around the silhouette). */
