--- a/about.html
+++ b/about.html
@@ -97,10 +97,6 @@
     object-fit: cover;
   }
 
-  .about .mediator-profile-inline .photo-wrapper {
-    margin-top: -60px;
-  }
-
   /* Photo wrapper (non-floating)
      - Holds the gray background "card" via ::before; keeps layout stable (no text wrapping around the silhouette). */
   .photo-wrapper {
@@ -116,7 +112,7 @@
   .photo-wrapper::before {
     content: "";
     position: absolute;
-    top: 10px;
+    top: 50px;
     left: -20px;
     width: 300px;
     height: 314px;
@@ -311,7 +307,7 @@
         <div class="mediator-profile-inline">
           <!-- Left column: portrait container (gray background uses ::before) -->
           <div class="photo-wrapper">
-            <img src="assets/kayla-profile.png" alt="Photo of mediator Kayla" class="profile-photo" style="width:100%; max-width:420px;">
+            <img src="assets/kayla-profile.png" alt="Photo of mediator Kayla" class="profile-photo" style="width:104%; max-width:420px; margin-top:-21px; margin-left:-35px;">
           </div>
 
           <!-- Right column: "Meet Kayla" -->
