--- a/about.html
+++ b/about.html
@@ -142,6 +142,15 @@
       -webkit-shape-outside: none;
     }
     .mediator-profile-inline .profile-text p { margin-right: 0; }
+    .about .mediator-profile-inline .profile-photo {
+      width: 100%;
+      max-width: 420px;
+      margin: 0 auto;
+    }
+    /* Raise Nina + Kayla photos ONLY on mobile */
+    .about .mediator-profile-inline .photo-wrapper {
+      margin-top: -120px !important;
+    }
   }
 
   /* "Meet Nina" heading
@@ -227,7 +236,6 @@
     }
   }
 
-</style>
   @media (max-width: 600px) {
     .logo img {
       height: 28px !important;
@@ -236,7 +244,6 @@
       padding: 0.4rem 0 !important;
     }
   }
-</style>
 </style>
 </head>
 
